--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Cheat The Sims 4 - Bahasa indonesia</title>
+    <title>calculator - by. Aditya Arisandi</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
